# CPL-Project

./: CMakeLists.txt  README.md  main.c
include/: common.h  game.h  main.h
include/utils/: audio.h  display.h  input.h
src/: CMakeLists.txt  game.c  main.c
src/utils/: audio.c  display.c
utils/: input.c
